# HyperHost

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  pre-build.ps1  pytest.ini
.github/workflows/: release.yml
docs/: cli.md
scripts/: bump-version.ps1  bump-version.sh
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  app.manifest  build.rs  nsis-hooks.nsi  tauri.conf.json  tauri.macos.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: docker.rs  lib.rs  main.rs  mcp.rs  paths.rs  state.rs
src-tauri/src/cert/: ca.rs  linux_store.rs  macos_store.rs  mkcert.rs  mod.rs  windows_store.rs
src-tauri/src/cloudflare/: mod.rs  named_tunnel.rs
src-tauri/src/db/: mod.rs
src-tauri/src/detect/: mod.rs  ports.rs  projects.rs  templates.rs
src-tauri/src/dns/: hosts.rs
src-tauri/src/ipc/: commands.rs
src-tauri/src/nginx/: config.rs  import.rs  manager.rs  mod.rs  tail.rs
src/components/: DockerPanel.tsx  NamedTunnelPanel.tsx  NginxEditorMode.tsx  QuickStartPanel.tsx  TrafficInspector.tsx  UpdateDialog.tsx
src/lib/: tauri.ts
src/lib/createI18n/: createI18n.ts  index.ts  strFirstLetter.ts  strToCapitalize.ts  types.ts
src/translation/: index.ts  translation.ts
src/translation/en/: index.ts
src/translation/vi/: index.ts
tests/: .gitignore  test_dh.py
tests/node-test-app/: Dockerfile  docker-compose.yml  index.js  package.json
