[package]
name = "devhost"
version = "0.1.3"
description = "Local Virtual Domain Manager for Windows"
authors = ["NAM"]
edition = "2021"
default-run = "devhost"

[lib]
name = "devhost_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "hyh"
path = "src/bin/cli.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }
winresource = "0.1"

[dependencies]
tauri = { version = "2", features = ["tray-icon"], optional = true }
tauri-plugin-opener = { version = "2", optional = true }
tauri-plugin-shell = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rcgen = "0.13"
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2.3.1"
linemux = "0.3.0"

[features]
default = ["gui"]
gui = ["dep:tauri", "dep:tauri-plugin-opener", "dep:tauri-plugin-shell"]
