[package]
name = "hyperhost"
version = "0.2.9"
description = "Local HTTPS Domain Manager"
authors = ["NAM"]
edition = "2021"
default-run = "hyperhost"

[lib]
name = "hyperhost_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "hyh"
path = "src/bin/cli.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"

[dependencies]
tauri = { version = "2", features = ["tray-icon"], optional = true }
tauri-plugin-opener = { version = "2", optional = true }
tauri-plugin-shell = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rcgen = "0.13"
sha2 = "0.10"
base64 = "0.22"
time = "0.3"
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = "1"
dirs = "5"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
tauri-plugin-updater = { version = "2.10.0", optional = true }
tauri-plugin-process = { version = "2.3.1", optional = true }

[features]
default = ["gui"]
gui = ["dep:tauri", "dep:tauri-plugin-opener", "dep:tauri-plugin-shell", "dep:tauri-plugin-updater", "dep:tauri-plugin-process"]

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"
